--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/root": "react-native-async-storage/async-storage",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.4",
     "expo-constants": "~16.0.1",
+    "expo-device": "^6.0.2",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.12",
     "expo-notifications": "~0.28.1",
+    "expo-router": "~3.5.12",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
